Wed Jan 23 16:16:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/mkmf/test_constant.rb: tests for try_constant.
	  TODO: define check_constant and use it.

Wed Jan 23 13:35:37 2013  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (ruby_init_stack): ignore `STACK_END_ADDRESS'
	  if Ruby interpreter is running on co-routine.
	  [Feature #2294]
	  https://bugs.ruby-lang.org/issues/2294#note-18

Wed Jan 23 12:28:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn_flags): check the results
	  of acp_to_wstr() which can return NULL.  [ruby-core:51557] [Bug #7721]

Wed Jan 23 10:40:49 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/assignment.rdoc (Implicit Array Assignment):  Clarify
	  that "left-hand side" means "of the assignment".  Suggested by Jorge
	  Dias.
	* doc/syntax/assignment.rdoc (Multiple Assignment):  ditto.

Wed Jan 23 10:34:47 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/assignment.rdoc (Local Variables and Methods):  Fixed
	  example showing caching of a method's results into a local variable.
	  Added not about using an explicit receiver to call a method that
	  matches a local variable.  Suggested by markov_twain on twitter.

Wed Jan 23 10:20:08 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/README:  Fixed typo.  Patch by Pradeep Sahoo.
	  Fixes #240 on github

Wed Jan 23 09:53:39 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/servlet.rb:  Fixed display of site and home documentation.
	  Fixes rdoc issue #170 by Thomas Leitner.
	* test/rdoc/test_rdoc_servlet.rb:  Test for above.

	* lib/rdoc/code_object.rb:  Split #initialize_visibility from
	  #initialize for reuse when loading a stored object.
	  Fixes rdoc issue #171 by Thomas Leitner.

	* lib/rdoc/any_method.rb:  Initialize visibility for #display?  For
	  rdoc issue #171
	* lib/rdoc/attr.rb:  ditto.
	* lib/rdoc/class_module.rb:  ditto.
	* lib/rdoc/top_level.rb:  ditto.